--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,18 @@ body{
 }
 
 /* upload form styles */
-
+label input{
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
 
 /* progress bar styles */
-
+.progress-bar{
+  height: 5px;
+  background: var(--primary);
+  margin-top: 20px;
+}
 
 /* image grid styles */
 
